--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=4.16
 _srcname=linux-stable-rc
-pkgver=4.16.9.55.g2b695e770deb
+pkgver=4.16.10.47.g103647176516
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -85,8 +85,7 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
         'linux.preset'
         '0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch'
         '0002-drm-i915-edp-Only-use-the-alternate-fixed-mode-if-it.patch'
-        '0003-Partially-revert-swiotlb-remove-various-exports.patch'
-        '0004-xhci-Fix-USB3-NULL-pointer-dereference-at-logical-di.patch')
+        '0003-Partially-revert-swiotlb-remove-various-exports.patch')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-uksm-git} 
@@ -111,10 +110,6 @@ prepare() {
     ### NVIDIA driver compat
         msg "NVIDIA driver compat"
         patch -Np1 -i ../0003-Partially-revert-swiotlb-remove-various-exports.patch
-    
-    ### Fix https://bugs.archlinux.org/task/58237
-        msg "Fix #58237"
-        patch -Np1 -i ../0004-xhci-Fix-USB3-NULL-pointer-dereference-at-logical-di.patch
     
     ### Fix gcc8 bogus warnings
         msg "Fix gcc8 bogus warnings"
@@ -391,7 +386,6 @@ sha512sums=('SKIP'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
             '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf'
-            'd4a5dadbdbbb8a2c2c3b4b5e77ea19664e0742825648d10635ce3b7642f01d71d51fd8ed58dcfd686981ef9c3f83965746686231b9bac1974809be1618e60373'
-            '071c38539db9660e743cca5514a5b2c10e79716c59435976f7cd18bd77254b39e1cdba6386ac6938c00c7585e1834508f85bc65f4d2af28246dae864b71b06b3'
-            '6c4bf0d5230e7a3e895f88cf6cc84d6df550fefa2c865e4d5853e02682e781c5a149fb4f853ac7513f335271415fae4a4edf13139de4ba067102e9d8083c22a0'
-            'f5a6e9e6244ed2bb336f359a65ba922226f76319c216eae3c1acca137084ab0c89372d8ec2299d0377ad909534a5d13d8db9a9376e357d600518c81811256d07')
+            '72064984e86db79d07b4b493752f1b0dc6815e53328cbca47d226f9e06bfccc5398550c510a836a60b2e8a8bf674775af958621314b2e6555ed2c343427a28a7'
+            'a4ecfd93472b2998857160b116a332f68eebb84a03de4749af5a577c9da709b08c7a9460392e19d79ed374f8f441eaa2e6ec3ae93dc4424b59af0d188c2c2e35'
+            '840b67401680fdaa8b06a188f50799dd0967e782d51e0eaf381e8568d66cba10d4eed3788bbfb723fd8f65f9686b0b21ec0fd1caa3834d83ea785df3488ab071')
