--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -50,9 +50,9 @@ _1k_HZ_ticks=
 
 pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
-_major=4.16
+_major=4.17
 _srcname=linux-stable-rc
-pkgver=4.16.13.48.g79de57953e95
+pkgver=4.17.1.0.gd0c077266ecb
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -71,7 +71,6 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v8.1+_kernel_v4.13+.patc
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.git#branch=linux-${_major}.y"
         "${_gcc_name}-${_gcc_rel}.tar.gz::${_gcc_path}/${_gcc_rel}.tar.gz"
         "${_uksm_path}/${_uksm_patch}"
-        "${_lucjanpath}/0006-include-linux-add-gcc8-support.patch"
          # the main kernel config files
         'config'
          # pacman hook for depmod
@@ -83,8 +82,8 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable-rc.gi
          # standard config files for mkinitcpio ramdisk
         'linux.preset'
         '0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch'
-        '0002-ACPI-watchdog-Prefer-iTCO_wdt-on-Lenovo-Z50-70.patch'
-        '0003-Revert-drm-i915-edp-Allow-alternate-fixed-mode-for-e.patch')
+        '0002-Revert-drm-i915-edp-Allow-alternate-fixed-mode-for-e.patch'
+        '0003-ACPI-watchdog-Prefer-iTCO_wdt-always-when-WDAT-table.patch')
 
 _kernelname=${pkgbase#linux}
 : ${_kernelname:=-uksm-git} 
@@ -102,17 +101,13 @@ prepare() {
         msg "Disable USER_NS for non-root users by default"
         patch -Np1 -i ../0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch
     
-    ### Fix https://bugs.archlinux.org/task/56780
-        msg "Fix #56780"
-        patch -Np1 -i ../0002-ACPI-watchdog-Prefer-iTCO_wdt-on-Lenovo-Z50-70.patch
-    
     ### Fix https://bugs.archlinux.org/task/56711
         msg "Fix #56711"
-        patch -Np1 -i ../0003-Revert-drm-i915-edp-Allow-alternate-fixed-mode-for-e.patch
+        patch -Np1 -i ../0002-Revert-drm-i915-edp-Allow-alternate-fixed-mode-for-e.patch
     
-    ### Fix gcc8 bogus warnings
-        msg "Fix gcc8 bogus warnings"
-        patch -Np1 -i ../0006-include-linux-add-gcc8-support.patch
+    ### Fix https://bugs.archlinux.org/task/56780
+        msg "Fix #56780"
+        patch -Np1 -i ../0003-ACPI-watchdog-Prefer-iTCO_wdt-always-when-WDAT-table.patch
     
     ### Patch source with UKSM
         msg "Patching source with UKSM"
@@ -376,13 +371,12 @@ done
 
 sha512sums=('SKIP'
             'a0f37a9b8dbd11f8ef4450b06afee0a6e5519cb5a5cd78f84896812b007ef645bcb9c733ae9817c24d1f4a4c2114258015abceb5a94c7e08d2bb00531a6f04c7'
-            'ab962157c2c20faf0bd164a82c2e28ce35fd581d640409ae6419dc2a64c82b7f49e7215149de0bc028dd3d517434160d68127b05137f6b6611641cc871f6c76e'
-            '9737f30e748e043a1b6ab56bd0df6dc9607b4a2749243e599f5563b157aaf339ad43020a526a11a6fc809cc1abe50ac1cb12188bf5b367f6458fa0dbc2c1824d'
-            '90ed39424f82dce6fb5c13c13239463109786fdd0f961fef9b7ad6f90b975e49d712d3a8e67e49b08340caa96a604fc13992eaea4a5f70dc4894f8a1f2ee88cf'
+            '30fc872a19686bd75b0cfa0614980a41d74f4cd40c9fd2c98f82ab4554ad39ccd7ddace9068f354572c1bdf14eed55c8e6d3390127c1a83ec093cf1487a31a0d'
+            'c24ccb42f43e5ff79c59eba93f441c0ff985dbb5c2a17d877aca12974c2121aab8847db550e63ccec795175f3d0ec6417bde9c361337d2dd1e38ce50a1023a37'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '4a8b324aee4cccf3a512ad04ce1a272d14e5b05c8de90feb82075f55ea3845948d817e1b0c6f298f5816834ddd3e5ce0a0e2619866289f3c1ab8fd2f35f04f44'
             '6346b66f54652256571ef65da8e46db49a95ac5978ecd57a507c6b2a28aee70bb3ff87045ac493f54257c9965da1046a28b72cb5abb0087204d257f14b91fd74'
             '2dc6b0ba8f7dbf19d2446c5c5f1823587de89f4e28e9595937dd51a87755099656f2acec50e3e2546ea633ad1bfd1c722e0c2b91eef1d609103d8abdc0a7cbaf'
-            '26619b938a47c841f0c480a113cfbb1ee6f1121c21dfecbe246c1f7af7697f86cfb8253f09966eab2e386734ce4ad156159babdba4365c2f199c369c3d7e8ee8'
-            'f6aed92697c35e7919a0d784185e7af15b6be2762e3dd235267ca9744a826ac693d0ffcb07b9d1cc8571f57d518c1ce1c276cf7677e8375188f05f71d4added0'
-            'cc8852b089aa24f588ad1af726503ecd1012ad7e1cbc47ea77f03a5f7aecd25306d40f2e16b8a1afeafe7e2e97b6b6840c9f462ed7be358090117e2e024df1bd')
+            'b6133ce52c3a900d34db23568aaf5cdffab3d50b5e9c2008f1f7fcc650cb434101c718b5446e525ebe71050b0591d3be66ac930cf9986c906abcc3bfcf42f763'
+            '8ed1b4ef95120e9025299d9ae392cba49905bfcb29e3a1dfb9dd95a7925f25f52f57774b381410d70167cf2edef99271e7c12fac2b1aa4e9c8aa6655d150d22c'
+            'cddf8e907b4fbb5935a5239dd5a2b788b3f3fa1f91825d5191d154434a62c4dc16f4ccffc2ea4c5446d0c69457a918f9a2ca6d817bae3ddd694df4b50ab3e89b')
