--- a/stable-rc/linux-uksm-git/PKGBUILD
+++ b/stable-rc/linux-uksm-git/PKGBUILD
@@ -53,8 +53,8 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=4.19
 _srcname=linux-stable-rc
-pkgver=4.19.8.r57.g131702ed5d98
-pkgrel=2
+pkgver=4.19.8.r119.g6a09e212b52e
+pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
 license=('GPL2')
@@ -62,8 +62,7 @@ options=('!strip')
 makedepends=('git' 'kmod' 'inetutils' 'bc' 'libelf' 'python-sphinx' 'graphviz')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
-_uksm_path="https://raw.githubusercontent.com/sirlucjan/uksm/master"
-#_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master"
+_uksm_path="https://raw.githubusercontent.com/dolohow/uksm/master"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="uksm-${_major}.patch"
 _gcc_path="https://raw.githubusercontent.com/graysky2/kernel_gcc_patch/master"
@@ -386,7 +385,7 @@ done
 
 sha512sums=('SKIP'
             'e62aa377a0acc4f63f394e27a0fb7316583ff1a6a6afdfcc97593ddffd7d2bc224cfd70b552cb3fb9513cf6b8db4c2fd913d21ec2380db8cd642e37d4d67370c'
-            '1ca6c6824ed4a84e6edb24d601171b8bcca8086a24cbb2f40772822e002c3eb53c92e96818f910834ab33614bed9914c8461e91609ff628b48ea1274d6b27b2b'
+            '81d52d3d9bf542c9bdd3024ef1a956804bfdfb1d9e321100caff76de96da8f0591a4fd843b00252ccc43b9c01441793b680eca4e25532472ef26d9b914dbe411'
             '4c265e32ac7e7fdbaa3710cc5d596a7adfe10b85d62d0c4da46f9ff5697f6926df56edf90d46881bd67090234840b337e16bb830f751c91ee0d00e41e29c5d7b'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
