--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=4.20
 _srcname=linux
-pkgver=4.20.11.r0.g104d68b9d65d
+pkgver=4.20.12.r0.gc91951f15978
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -71,7 +71,6 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=l
         "${_gcc_path}/${_gcc_patch}"
         "${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/arch-patches/0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
-        "${_lucjanpath}/arch-patches-v2/0001-net-crypto-set-sk-to-NULL-when-af_alg_release.patch"
         "${_lucjanpath}/arch-patches-v2/0002-exec-Fix-mem-leak-in-kernel_read_file.patch"
          # the main kernel config files
         'config'
@@ -388,7 +387,6 @@ sha512sums=('SKIP'
             'e62aa377a0acc4f63f394e27a0fb7316583ff1a6a6afdfcc97593ddffd7d2bc224cfd70b552cb3fb9513cf6b8db4c2fd913d21ec2380db8cd642e37d4d67370c'
             'af14061bc151ed0b94c7759da1618a4a05d2c7669aec31d6e59a2f4874fe3b5a1774ad8b8f67f6c01daec84aae2dbd464ce4a74c611dd81619a3f4312507f017'
             '1d98e34bb276c8ccbc5f175a4ef887ccb9ecf2c72ded9133b2973bf940f8ca996129110d0a49b3bbe25f997a3f28108f3d8477403b05f01fee2589b4a04f4d0b'
-            'cbe8d7d9c09498047d56f3b88b99501a70490479a7c54ede16105c9b682f1c0fe109c08a4ad6921f6aa86110043cd51322a5697c838b03d1a8ed4a669ba30b74'
             '3b58b55a475a88ea4773bd28064ec4670c7ded3b028fc337facf78014529fecf413ad1aeaa12424b6f478b237438a31205f8938908cc47f1b612894661626bf0'
             '1c180319a3940272c7c22febb746ce804abd64b6ae53651908b9d800aefd366cae7f29a4c6ccbca84810fe6c5ece5b83d7a5ae337453e1163ffcf8f7dd3f5356'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
