--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.0
 _srcname=linux
-pkgver=5.0.3.r0.g449959917f0c
+pkgver=5.0.6.r0.g820c1fa51501
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -72,7 +72,6 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=l
         "${_gcc_path}/${_gcc_patch}"
         "${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/arch-patches/0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
-        "${_lucjanpath}/arch-patches//0002-netfilter-nf_tables-fix-set-double-free-in-abort-pat.patch"
          # the main kernel config files
         'config'
          # pacman hook for depmod
@@ -388,7 +387,6 @@ sha512sums=('SKIP'
             'e62aa377a0acc4f63f394e27a0fb7316583ff1a6a6afdfcc97593ddffd7d2bc224cfd70b552cb3fb9513cf6b8db4c2fd913d21ec2380db8cd642e37d4d67370c'
             'c6e27e572de970d0a0a92bf71ec68bdf60329cb0e638455fec722fceb53cb1d614ccc78bec2d66283b494087a0e69a7cf00a9a0a8503758516c335c3ce498437'
             '1e8a1deb7a0100627b928b588a9419b58aa42ac1b33d974b83c24dcd4e5f59ace694959e30df2692a96de329d8bab61cd42bb59578f7814845391203416d7364'
-            '0f71de65c8979b0defbffd1443c160bde02959e74fee97da76113c971604a11e997386a86c9d3ffa17631ff2d28b0871965656b56e2ddee73fd634e330010b77'
             'a527fb25b73be4f8652d3ef6162cffffb3d07b6ced0e30cf8de0761ff747db44fb985d17a058f219b8f029d7b03d809d88d8be96cd024a1c9b30e3b0acf188db'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
