--- a/stable/linux-uksm-git/PKGBUILD
+++ b/stable/linux-uksm-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.1
 _srcname=linux
-pkgver=5.1.9.r0.g2df16141a2c4
+pkgver=5.1.10.r0.g2df16141a2c4
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -79,6 +79,7 @@ source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=l
         #"${_uksm_path}/${_uksm_patch}"
         "${_lucjanpath}/arch-patches-v3/0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
         "${_lucjanpath}/arch-patches-v3/0002-ZEN-Add-CONFIG-for-unprivileged_userns_clone.patch"
+        "${_lucjanpath}/arch-patches-v4/0001-bcache-fix-stack-corruption-by-PRECEDING_KEY.patch"
          # the main kernel config files
         'config'
          # pacman hook for depmod
@@ -384,6 +385,7 @@ sha512sums=('SKIP'
             '6d8f5f5999de7639da38385c48c8617baf1a74a986d648eb555f1e5213dc29ab52313f8f14a71330b678b577fbf0c1a40740cb6cab27f440fb2288b053bc6d8d'
             '2f7a1939c8e9e86b39a3385ef33f1fb738e507ae771696f57d5fa2032a46438c50e5ce54ad607643dffa0d544d401fc40616db9e88defcf7719f32efa3cdbefc'
             'ad3f2c10467341fcbf0f6a636aef0bf216d9c0d993d79ce3825e5432ad8261e6e596772931a6ac090742cf7299bdf72730e75184efc9502246ed521d79214034'
+            '640c99326b202e633f4d323772b580c7ba562d7d7b3c95dfa57b09315541ac285326faf72c25f95645f79bd77498b17b958b15eb2cf312863f15ff223157f918'
             'cded7012b1b1931c8754b0bbcaa27e95a8be72541500f29af1e4ca3335d92085762611535ad672af5787d96a01139f2c62536b1c541d2835e57eb5319d8d51c2'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
